--- a/PluginManager_Mobile/PluginManager_Mobile/PluginManager_Mobile.csproj
+++ b/PluginManager_Mobile/PluginManager_Mobile/PluginManager_Mobile.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\CategoryPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PluginDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
