--- a/PluginManager_Mobile/PluginManager_Mobile/PluginManager_Mobile.csproj
+++ b/PluginManager_Mobile/PluginManager_Mobile/PluginManager_Mobile.csproj
@@ -21,6 +21,9 @@
     <EmbeddedResource Update="Views\CategoryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PluginDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
